refactor: remove comments for final submission